--- a/src/components/Contents.module.scss
+++ b/src/components/Contents.module.scss
@@ -13,17 +13,16 @@
   text-align: center;
 }
 
-.reactLogo {
-  animation: App-logo-spin infinite 20s linear;
-  // height: 40vmin;
-  pointer-events: none;
+.logo {
+  height: 40vmin;
+  margin-top: 20%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+// @keyframes App-logo-spin {
+//   from {
+//     transform: rotate(0deg);
+//   }
+//   to {
+//     transform: rotate(360deg);
+//   }
+// }
