--- a/src/components/User.module.scss
+++ b/src/components/User.module.scss
@@ -30,3 +30,11 @@
   font-size: 18px;
   margin: 3px;
 }
+
+.statusDot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin-left: 5px;
+  display: inline-block;
+}
