--- a/src/components/UserList.module.scss
+++ b/src/components/UserList.module.scss
@@ -31,21 +31,11 @@
     }
   }
 
-  .onlineBar {
+  .roleBar {
     text-align: center;
     height: 24px;
-    background: #51cf66;
+    background: #5bc0ff;
     color: #ffffff;
-    text-shadow: 0px 2px 2px #000000;
-    margin-bottom: 3px;
-  }
-
-  .offlineBar {
-    text-align: center;
-    height: 24px;
-    background: #ff6b6b;
-    color: #ffffff;
-    margin-bottom: 10px;
     text-shadow: 0px 2px 2px #000000;
     margin-bottom: 3px;
   }
