--- a/src/components/LoginBox.module.scss
+++ b/src/components/LoginBox.module.scss
@@ -1,3 +1,16 @@
+.loginContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo{
+  top: -10%;
+  transform: scale(0.7);
+  position: absolute;
+}
+
 .loginBox {
   position: absolute;
   left: 50%;
@@ -8,8 +21,8 @@
   max-width: 400px;
   max-height: 300px;
   text-align: center;
-  background-color: #383d40;
-  color: #ffffff;
+  background-color: white;
+  color: rgba(0, 0, 0, 0.6);
   border-radius: 4px;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
