--- a/src/components/UserList.module.scss
+++ b/src/components/UserList.module.scss
@@ -34,7 +34,7 @@
   .roleBar {
     text-align: center;
     height: 24px;
-    background: #5bc0ff;
+    background: #344ffd;
     color: #ffffff;
     text-shadow: 0px 2px 2px #000000;
     margin-bottom: 3px;
