hackathon submission version

--- a/src/components/TodoList.module.scss
+++ b/src/components/TodoList.module.scss
@@ -41,3 +41,18 @@
 .unShow {
   display: none;
 }
+
+.userInfo {
+  padding: 1rem;
+  font-size: 1.7rem;
+  text-align: center;
+  font-weight: 300;
+  background: #e6e6e6;
+  color: black;
+  border-radius: 5px;
+  margin-top: 1rem;
+}
+
+.userInfo div {
+  margin-bottom: 2rem;
+}
